tests/error/modifier_errors/flags_triple_dagger2.err
Error: Dagger constraint violation (at $FILE:15:16)
   | 
13 |         with power(2):
14 |             with dagger:
15 |                 foo(q)
   |                 ^^^^^^ This function cannot be called in a dagger context

Help: Consider adding the flag `(dagger=True)` to the decorator of the function
`foo`

Guppy compilation failed due to 1 previous error
